fix: adjust buttons overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,9 @@ h1, h2, h3, h4, h5, h6 {
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+button {
+  overflow-wrap: break-word;
+}
 #maincontent {
   background-color: #f3f3f3;
   display: flex;
